--- a/DogFetchApp/Views/MainWindow.xaml
+++ b/DogFetchApp/Views/MainWindow.xaml
@@ -48,10 +48,10 @@
             </Grid.RowDefinitions>
 
             <TextBlock x:Name="Breed_Label" Grid.Column="0" Grid.Row="0" Text="{x:Static p:Resources.Breed_Label}"/>
-            <ComboBox Grid.Column="1" Grid.Row="0" x:Name="Breeds">
+            <ComboBox Grid.Column="1" Grid.Row="0" x:Name="BreedsList" ItemsSource="{Binding BreedsListCollection}">
                 <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                     
+                    <DataTemplate >
+                        <TextBlock Text="{Binding}"/>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
@@ -85,7 +85,7 @@
                     </ListView.ItemTemplate>
                 </ListView>
                 <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
-                    <Button Content="{x:Static p:Resources.previousImageButton}" Margin="10" Click="Click_precedent"/>
+                    <Button Content="{x:Static p:Resources.previousImageButton}" Margin="10"/>
                     <Button Content="{x:Static p:Resources.nextImageButton}" Margin="10" Click="Click_suivant"/>
                 </StackPanel>
             </Grid>
