nbr d'img ok et clear list

--- a/DogFetchApp/Views/MainWindow.xaml
+++ b/DogFetchApp/Views/MainWindow.xaml
@@ -56,11 +56,12 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
             <TextBlock x:Name="NbrPicture_Lable" Grid.Row="1" Text="{x:Static p:Resources.NbrPicture_Lable}"/>
-            <ComboBox Grid.Row="1" Grid.Column="1">
-                <ComboBoxItem Content="1"/>
-                <ComboBoxItem Content="3"/>
-                <ComboBoxItem Content="5"/>
-                <ComboBoxItem Content="10"/>
+            <ComboBox Grid.Row="1" Grid.Column="1" x:Name="NbrImgAsked"  ItemsSource="{Binding NbrImgList}" SelectedItem="{Binding SelectedNbr}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate >
+                        <TextBlock Text="{Binding}"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
             </ComboBox>
             <Button Grid.Row="2" Grid.Column="1" Name="Fetch_Button" Content="{x:Static p:Resources.Fetch_Button}" Width="150" Command="{Binding LoadImagesCommand}"/>
             <Grid Grid.Row="3" Grid.ColumnSpan="2" Margin="20">
