--- a/DogFetchApp/Views/MainWindow.xaml
+++ b/DogFetchApp/Views/MainWindow.xaml
@@ -79,7 +79,7 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                                <Image Source="{Binding}" HorizontalAlignment="Stretch" VerticalAlignment="Top" Stretch="UniformToFill"/>
+                                <Image Source="{Binding}" HorizontalAlignment="Stretch" VerticalAlignment="Top" MaxHeight="250px"/>
                                 <TextBlock Text="{Binding }" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" />
                             </StackPanel>
                         </DataTemplate>
@@ -87,7 +87,7 @@
                 </ListView>
                 <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
                     <Button Content="{x:Static p:Resources.previousImageButton}" Margin="10"/>
-                    <Button Content="{x:Static p:Resources.nextImageButton}" Margin="10"/>
+                    <Button Content="{x:Static p:Resources.nextImageButton}" Margin="10" Command="{Binding NextImagesCommand}"/>
                 </StackPanel>
             </Grid>
         </Grid>
